Source/WebKit/win/WebView.cpp
@@ -165,6 +165,7 @@
 #include <WebCore/WindowMessageBroadcaster.h>
 #include <WebCore/WindowsTouch.h>
 #include <bindings/ScriptValue.h>
+#include <d2d1.h>
 #include <wtf/MainThread.h>
 #include <wtf/RAMSize.h>
 #include <wtf/UniqueRef.h>
@@ -207,6 +208,8 @@
 #include <wtf/text/CString.h>
 #include <wtf/text/StringConcatenate.h>
 #include <wtf/win/GDIObject.h>
+
+#define WEBKIT_DRAWING 4
 
 // Soft link functions for gestures and panning feedback
 SOFT_LINK_LIBRARY(USER32);
@@ -832,6 +835,11 @@ void WebView::deleteBackingStore()
         m_deleteBackingStoreTimerActive = false;
     }
     m_backingStoreBitmap = nullptr;
+#if USE(DIRECT2D)
+    m_backingStoreD2DBitmap = nullptr;
+    m_backingStoreGdiInterop = nullptr;
+    m_backingStoreRenderTarget = nullptr;
+#endif
     m_backingStoreDirtyRegion = nullptr;
     m_backingStoreSize.cx = m_backingStoreSize.cy = 0;
 }
@@ -845,12 +853,50 @@ bool WebView::ensureBackingStore()
     if (width > 0 && height > 0 && (width != m_backingStoreSize.cx || height != m_backingStoreSize.cy)) {
         deleteBackingStore();
 
+#if USE(DIRECT2D)
+        auto bitmapSize = D2D1::SizeF(width, height);
+        auto pixelSize = D2D1::SizeU(width, height);
+
+        if (!m_renderTarget) {
+            // Create a Direct2D render target.
+            auto renderTargetProperties = D2D1::RenderTargetProperties();
+            renderTargetProperties.usage = D2D1_RENDER_TARGET_USAGE_GDI_COMPATIBLE;
+            auto hwndRenderTargetProperties = D2D1::HwndRenderTargetProperties(m_viewWindow, pixelSize);
+            HRESULT hr = GraphicsContext::systemFactory()->CreateHwndRenderTarget(&renderTargetProperties, &hwndRenderTargetProperties, &m_renderTarget);
+            if (!SUCCEEDED(hr))
+                return false;
+        }
+
+        COMPtr<ID2D1SolidColorBrush> brush;
+        m_renderTarget->CreateSolidColorBrush(D2D1::ColorF(D2D1::ColorF::BlueViolet), &brush);
+
+        m_renderTarget->BeginDraw();
+        m_renderTarget->FillRoundedRectangle(D2D1::RoundedRect(D2D1::RectF(100.0f, 100.0f, 300.0f, 200.0f), 20.0f, 20.0f), brush.get());
+        m_renderTarget->EndDraw();
+#endif
         m_backingStoreSize.cx = width;
         m_backingStoreSize.cy = height;
         BitmapInfo bitmapInfo = BitmapInfo::createBottomUp(IntSize(m_backingStoreSize));
 
         void* pixels = NULL;
         m_backingStoreBitmap = SharedGDIObject<HBITMAP>::create(adoptGDIObject(::CreateDIBSection(0, &bitmapInfo, DIB_RGB_COLORS, &pixels, 0, 0)));
+
+#if USE(DIRECT2D)
+        HRESULT hr = m_renderTarget->CreateCompatibleRenderTarget(&bitmapSize, &pixelSize, nullptr, D2D1_COMPATIBLE_RENDER_TARGET_OPTIONS_GDI_COMPATIBLE, &m_backingStoreRenderTarget);
+        RELEASE_ASSERT(SUCCEEDED(hr));
+
+        hr = m_backingStoreRenderTarget->GetBitmap(&m_backingStoreD2DBitmap);
+        RELEASE_ASSERT(SUCCEEDED(hr));
+
+        hr = m_backingStoreRenderTarget->QueryInterface(__uuidof(ID2D1GdiInteropRenderTarget), (void**)&m_backingStoreGdiInterop);
+        RELEASE_ASSERT(SUCCEEDED(hr));
+
+        COMPtr<ID2D1SolidColorBrush> brush2;
+        m_backingStoreRenderTarget->CreateSolidColorBrush(D2D1::ColorF(D2D1::ColorF::SeaGreen), &brush2);
+        m_backingStoreRenderTarget->BeginDraw();
+        m_renderTarget->FillRoundedRectangle(D2D1::RoundedRect(D2D1::RectF(100.0f, 100.0f, 300.0f, 200.0f), 20.0f, 20.0f), brush2.get());
+        m_renderTarget->EndDraw();
+#endif
         return true;
     }
 
@@ -912,6 +958,16 @@ void WebView::scrollBackingStore(FrameView* frameView, int logicalDx, int logica
     FloatRect clipRect(logicalClipRect);
     clipRect.scale(scaleFactor);
 
+#if USE(DIRECT2D)
+    RECT scrollRectWin(scrollViewRect);
+    RECT clipRectWin(enclosingIntRect(clipRect));
+    RECT updateRect;
+    ::ScrollWindowEx(m_viewWindow, dx, dy, &scrollRectWin, &clipRectWin, nullptr, &updateRect, 0);
+    ::InvalidateRect(m_viewWindow, &updateRect, FALSE);
+
+    if (m_uiDelegatePrivate)
+        m_uiDelegatePrivate->webViewScrolled(this);
+#else
     if (isAcceleratedCompositing()) {
         // FIXME: We should be doing something smarter here, like moving tiles around and painting
         // any newly-exposed tiles. <http://webkit.org/b/52714>
@@ -971,6 +1027,7 @@ void WebView::scrollBackingStore(FrameView* frameView, int logicalDx, int logica
 
     // Clean up.
     ::SelectObject(bitmapDC.get(), oldBitmap);
+#endif // USE(DIRECT2D)
 }
 
 void WebView::sizeChanged(const IntSize& newSize)
@@ -996,6 +1053,20 @@ void WebView::sizeChanged(const IntSize& newSize)
 #elif USE(TEXTURE_MAPPER_GL)
     if (m_acceleratedCompositingContext)
         m_acceleratedCompositingContext->resizeRootLayer(newSize);
+#endif
+
+#if USE(DIRECT2D)
+    if (m_renderTarget) {
+        m_renderTarget->Resize(newSize);
+        return;
+    }
+
+    // Create a Direct2D render target.
+    auto renderTargetProperties = D2D1::RenderTargetProperties();
+    renderTargetProperties.usage = D2D1_RENDER_TARGET_USAGE_GDI_COMPATIBLE;
+    auto hwndRenderTargetProperties = D2D1::HwndRenderTargetProperties(m_viewWindow, newSize);
+    HRESULT hr = GraphicsContext::systemFactory()->CreateHwndRenderTarget(&renderTargetProperties, &hwndRenderTargetProperties, &m_renderTarget);
+    ASSERT(SUCCEEDED(hr));
 #endif
 }
 
@@ -1057,6 +1128,13 @@ void WebView::updateBackingStore(FrameView* frameView, HDC dc, bool backingStore
 
     LOCAL_GDI_COUNTER(0, __FUNCTION__);
 
+#if USE(DIRECT2D)
+    if (!m_backingStoreGdiInterop) {
+        HRESULT hr = m_backingStoreRenderTarget->QueryInterface(__uuidof(ID2D1GdiInteropRenderTarget), (void**)&m_backingStoreGdiInterop);
+        RELEASE_ASSERT(SUCCEEDED(hr));
+    }
+#endif
+
     GDIObject<HDC> bitmapDCObject;
 
     HDC bitmapDC = dc;
@@ -1066,6 +1144,10 @@ void WebView::updateBackingStore(FrameView* frameView, HDC dc, bool backingStore
         bitmapDCObject = adoptGDIObject(::CreateCompatibleDC(windowDC));
         bitmapDC = bitmapDCObject.get();
         oldBitmap = ::SelectObject(bitmapDC, m_backingStoreBitmap->get());
+#if USE(DIRECT2D)
+        HRESULT hr = m_backingStoreGdiInterop->GetDC(D2D1_DC_INITIALIZE_MODE_COPY, &bitmapDC);
+        RELEASE_ASSERT(SUCCEEDED(hr));
+#endif
     }
 
     if (m_backingStoreBitmap && (m_backingStoreDirtyRegion || backingStoreCompletelyDirty)) {
@@ -1094,8 +1176,12 @@ void WebView::updateBackingStore(FrameView* frameView, HDC dc, bool backingStore
         m_backingStoreDirtyRegion = nullptr;
     }
 
-    if (!dc)
+    if (!dc) {
         ::SelectObject(bitmapDC, oldBitmap);
+#if USE(DIRECT2D)
+        m_backingStoreGdiInterop->ReleaseDC(nullptr);
+#endif
+    }
 
     GdiFlush();
 
@@ -1128,6 +1214,73 @@ void WebView::performLayeredWindowUpdate()
     ::SelectObject(hdcMem.get(), hbmOld);
 
     m_needsDisplay = false;
+}
+
+void WebView::paintWithDirect2D()
+{
+#if USE(DIRECT2D)
+    Frame* coreFrame = core(m_mainFrame);
+    if (!coreFrame)
+        return;
+    FrameView* frameView = coreFrame->view();
+    frameView->updateLayoutAndStyleIfNeededRecursive();
+
+    if (!m_renderTarget) {
+        // Create a Direct2D render target.
+        auto renderTargetProperties = D2D1::RenderTargetProperties();
+        renderTargetProperties.usage = D2D1_RENDER_TARGET_USAGE_GDI_COMPATIBLE;
+
+        RECT rect;
+        ::GetClientRect(m_viewWindow, &rect);
+
+        IntRect clientRect(rect);
+
+        auto pixelSize = D2D1::SizeU(clientRect.width(), clientRect.height());
+
+        auto hwndRenderTargetProperties = D2D1::HwndRenderTargetProperties(m_viewWindow, pixelSize);
+        HRESULT hr = GraphicsContext::systemFactory()->CreateHwndRenderTarget(&renderTargetProperties, &hwndRenderTargetProperties, &m_renderTarget);
+        if (!SUCCEEDED(hr))
+            return;
+    }
+
+    m_renderTarget->BeginDraw();
+
+    m_renderTarget->SetTags(WEBKIT_DRAWING, __LINE__);
+    m_renderTarget->Clear();
+
+    // Direct2D honors the scale factor natively.
+    float scaleFactor = 1.0f;
+    float inverseScaleFactor = 1.0f / scaleFactor;
+
+    RECT clientRect;
+    GetClientRect(m_viewWindow, &clientRect);
+
+    IntRect dirtyRectPixels(0, 0, clientRect.right, clientRect.bottom);
+    FloatRect logicalDirtyRectFloat = dirtyRectPixels;
+    logicalDirtyRectFloat.scale(inverseScaleFactor);
+    IntRect logicalDirtyRect(enclosingIntRect(logicalDirtyRectFloat));
+
+    GraphicsContext gc(m_renderTarget.get());
+    gc.setDidBeginDraw(true);
+
+    if (frameView && frameView->frame().contentRenderer()) {
+        gc.save();
+        gc.scale(FloatSize(scaleFactor, scaleFactor));
+        gc.clip(logicalDirtyRect);
+        frameView->paint(gc, logicalDirtyRect);
+        gc.restore();
+        if (m_shouldInvertColors)
+            gc.fillRect(logicalDirtyRect, Color::white, CompositeDifference);
+    }
+
+    HRESULT hr = m_renderTarget->EndDraw();
+    // FIXME: Recognize and recover from error state:
+    UNUSED_PARAM(hr);
+
+    ::ValidateRect(m_viewWindow, &clientRect);
+#else
+    ASSERT_NOT_REACHED();
+#endif
 }
 
 void WebView::paint(HDC dc, LPARAM options)
@@ -1198,8 +1351,18 @@ void WebView::paint(HDC dc, LPARAM options)
 
     ::SelectObject(bitmapDC.get(), oldBitmap);
 
-    if (!dc)
+    if (!dc) {
         EndPaint(m_viewWindow, &ps);
+#if USE(DIRECT2D)
+        HRESULT hr = m_backingStoreRenderTarget->EndDraw();
+        // FIXME: Recognize and recover from error state:
+        RELEASE_ASSERT(SUCCEEDED(hr));
+#endif
+    }
+
+#if USE(DIRECT2D)
+    m_backingStoreGdiInterop->ReleaseDC(nullptr);
+#endif
 
     m_paintCount--;
 
@@ -1240,6 +1403,10 @@ void WebView::paintIntoBackingStore(FrameView* frameView, HDC bitmapDC, const In
     FloatRect logicalDirtyRectFloat = dirtyRectPixels;
     logicalDirtyRectFloat.scale(inverseScaleFactor);    
     IntRect logicalDirtyRect(enclosingIntRect(logicalDirtyRectFloat));
+
+#if USE(DIRECT2D)
+    m_backingStoreRenderTarget = nullptr;
+#endif
 
     GraphicsContext gc(bitmapDC, m_transparent);
     gc.setShouldIncludeChildWindows(windowsToPaint == PaintWebViewAndChildren);
@@ -2400,7 +2567,11 @@ LRESULT CALLBACK WebView::WebViewWndProc(HWND hWnd, UINT message, WPARAM wParam,
 
     switch (message) {
         case WM_PAINT: {
+#if USE(DIRECT2D)
+            webView->paintWithDirect2D();
+#else
             webView->paint(0, 0);
+#endif
             if (webView->usesLayeredWindow())
                 webView->performLayeredWindowUpdate();
             break;
@@ -5270,6 +5441,9 @@ HRESULT WebView::notifyPreferencesChanged(IWebNotification* notification)
 #if USE(TEXTURE_MAPPER_GL)
     static bool acceleratedCompositingAvailable = AcceleratedCompositingContext::acceleratedCompositingAvailable();
     enabled = enabled && acceleratedCompositingAvailable;
+#elif USE(DIRECT2D)
+    // Disable accelerated compositing for now.
+    enabled = false;
 #endif
     settings.setAcceleratedCompositingEnabled(enabled);
 
